--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "angular2-hmr": "^0.6.0",
     "autoprefixer": "^6.3.6",
+    "codelyzer": "0.0.19",
     "copy-webpack-plugin": "^2.1.3",
     "core-js": "^2.3.0",
     "css-loader": "^0.23.1",
@@ -45,7 +46,6 @@
     "karma-mocha-reporter": "^2.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
-    "ng2lint": "^0.0.10",
     "node-sass": "^3.6.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
