--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "karma": "^0.13.22",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.3",
+    "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-remap-istanbul": "^0.1.0",
     "karma-webpack": "^1.7.0",
@@ -67,7 +67,7 @@
     "ts-node": "^0.8.0",
     "tslint": "^3.10.2",
     "tslint-loader": "^2.1.4",
-    "typedoc": "0.3.12",
+    "typedoc": "^0.4.2",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "webpack": "^1.13.1",
