--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-remap-istanbul": "^0.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "node-sass": "^3.6.0",
     "null-loader": "^0.1.1",
