done the server rendering

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "build": "npm run _build && node ./config/sprite.js",
     "build:dev": "npm run _build -- -my-dev && node ./config/sprite.js -my-dev",
     "build:ghp": "npm run _build -- -my-ghp && node ./config/sprite.js -my-ghp",
+    "_build:html": "webpack --config ./config/webpack.generator.js --progress --display-modules --bail",
+    "_build:html:ghp": "npm run _build:html -- -my-ghp",
+    "gen:html": "npm run _build:html && node ./temp/ng-html/generator.bundle.js",
+    "gen:html:ghp": "npm run _build:html:ghp && node ./temp/ng-html/generator.bundle.js",
     "server": "http-server ./dist",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor ./config/protractor.chrome.js",
@@ -27,17 +31,23 @@
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/platform-server": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
     "angular2-hmr": "^0.7.0",
+    "angular2-universal": "^0.102.1",
     "autoprefixer": "^6.3.6",
     "codelyzer": "0.0.23",
     "copy": "^0.2.0",
     "core-js": "^2.4.0",
     "css-loader": "^0.23.1",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.6.3",
+    "html-minifier": "^2.1.5",
     "html-webpack-plugin": "^2.21.0",
     "http-server": "^0.9.0",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -54,6 +64,7 @@
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.9.1",
+    "preboot": "^2.1.2",
     "protractor": "^3.3.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^1.4.3",
@@ -73,6 +84,7 @@
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-md5-hash": "^0.0.5",
+    "webpack-node-externals": "^1.2.0",
     "zone.js": "^0.6.12"
   },
   "engines": {
