--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,19 @@ branches:
 
 language: node_js
 
+# https://docs.travis-ci.com/user/languages/javascript-with-nodejs#Node.js-v4-(or-io.js-v3)-compiler-requirements
+# @ To compile native modules
+env:
+  - CXX=g++-4.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+# To compile native modules @
+
 install:
   - npm install
 
