--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,15 @@ addons:
 install:
   - npm install
 
+before_script:
+  # @ open FireFox
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  # open FireFox @
+
 script:
   - npm test
   - npm run build
+  - npm run server
+  - sleep 3 # give a server some time to start
+  - npm run e2e:ff
