--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
     packages:
       - g++-4.8
 # To compile native modules @
-  firefox: "latest"
+  # firefox: "latest"
 
 install:
   - npm install
