modify files for windows and add Appveyor config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev:ip": "npm run dev -- --host 192.168.0.2 --port 8080",
     "dev:ip:hot": "npm run dev:ip -- --hot",
     "test": "karma start ./config/karma.conf.js --single-run",
+    "test:ie": "karma start ./config/karma.conf.js --single-run --browsers IE",
     "test:watch": "karma start ./config/karma.conf.js",
+    "test:ie:watch": "karma start ./config/karma.conf.js --browsers IE",
     "_build": "webpack --config ./config/webpack.prod.js --progress --display-modules --bail",
     "build": "npm run _build && node ./config/sprite.js",
     "build:dev": "npm run _build -- -my-dev && node ./config/sprite.js -my-dev",
@@ -20,11 +22,11 @@
     "gen:html:ghp": "npm run _build:html:ghp && node ./temp/ng-html/generator.bundle.js",
     "server": "http-server ./dist",
     "pree2e": "webdriver-manager update",
-    "pree2e:ff": "webdriver-manager update",
     "e2e": "protractor ./config/protractor.chrome.js",
-    "e2e:ff": "protractor ./config/protractor.firefox.js",
     "e2e:ip": "npm run e2e -- --baseUrl http://192.168.0.2:8080/",
     "e2e:ip:live": "npm run e2e:ip -- --elementExplorer",
+    "e2e:ff": "npm run pree2e && protractor ./config/protractor.firefox.js",
+    "e2e:ie": "npm run pree2e && protractor ./config/protractor.ie.js",
     "doc": "typedoc --options ./typedoc.json ./src",
     "start": "npm run dev",
     "postinstall": "typings install"
@@ -56,6 +58,7 @@
     "jasmine-spec-reporter": "^2.5.0",
     "karma": "^0.13.22",
     "karma-coverage": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.0",
