--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,14 +36,8 @@ test_script:
 
 deploy:
   - provider: Local
-    # port: 8080
-    # path: .\dist
-  narr-app.deploy_website: true
-  narr-app.site_name: Test
-  narr-app.hostname: localhost
-  narr-app.port: 8080
-  narr-app.protocol: http
-  narr-app.path: .\dist
+    port: 8080
+    path: .\dist
 
 after_deploy:
   - npm run e2e:ie
