--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,16 +28,18 @@ test_script:
   - npm run test:ie
   - npm run build
   - npm run gen:html
-  - dir | find "Directory"
   # - npm run server & ls & npm run e2e:ie # run a command in a new CMD
   # - timeout 3 # give a server some time to start
   # - sleep 3
   # - npm run e2e:ie
 
+artifacts:
+- path: .\dist
+  name: narr
+
 deploy:
   - provider: Local
-    port: 8080
-    path: .\dist
+    narr.port: 8080
 
 after_deploy:
   - npm run e2e:ie
