--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,16 +8,24 @@ branches:
   only:
   - master
 
-services:
-  - iis
+# https://www.appveyor.com/blog/2014/06/04/shallow-clone-for-git-repositories
+clone_depth: 10
+
+# https://www.appveyor.com/docs/build-cache
+cache: node_modules
 
 environment:
   nodejs_version: "6.2.1"
+
+# Fix line endings on Windows
+init:
+  - git config --global core.autocrlf true
 
 # Install scripts. (runs after repo cloning)
 install:
   - ps: Install-Product node $env:nodejs_version # ps: => PowerShell, cmd: cmd
   - del .\npm-shrinkwrap.json
+  - ren .\npm-shrinkwrap.window.json .\npm-shrinkwrap.json
   - npm install
 
 # MSBUILD off
@@ -28,20 +36,4 @@ test_script:
   - npm run test:ie
   - npm run build
   - npm run gen:html
-  # - npm run server & ls & npm run e2e:ie # run a command in a new CMD
-  # - timeout 3 # give a server some time to start
-  # - sleep 3
-  # - npm run e2e:ie
-
-artifacts:
-- path: .\dist
-  name: narr
-  type: WebDeployPackage
-
-deploy:
-  - provider: Local
-    port: 8080
-    artifact: narr
-
-after_deploy:
-  - npm run e2e:ie
+  - npm run e2e:appveyor
