update appveyor's config

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ init:
 install:
   - ps: Install-Product node $env:nodejs_version # ps: => PowerShell, cmd: cmd
   - del .\npm-shrinkwrap.json
-  - rename .\npm-shrinkwrap.window.json .\npm-shrinkwrap.json
+  - ren .\npm-shrinkwrap.window.json npm-shrinkwrap.json
   - npm install
 
 # MSBUILD off
