--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "e2e:ff": "npm run pree2e && protractor ./config/protractor.firefox.js",
     "e2e:ie": "npm run pree2e && protractor ./config/protractor.ie.js",
     "e2e:test": "npm run pree2e && gulp e2e",
+    "e2e:test2": "npm run pree2e && node ./config/protractor.js",
     "doc": "typedoc --options ./typedoc.json ./src",
     "start": "npm run dev",
     "postinstall": "typings install"
