--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "e2e:ip:live": "npm run e2e:ip -- --elementExplorer",
     "e2e:ff": "npm run pree2e && protractor ./config/protractor.firefox.js",
     "e2e:ie": "npm run pree2e && protractor ./config/protractor.ie.js",
-    "e2e:test": "npm run pree2e && gulp e2e",
-    "e2e:test2": "npm run pree2e && node ./config/protractor.js",
+    "e2e:one": "npm run pree2e && node ./config/protractor.js 8080 chrome",
+    "e2e:one:ie": "npm run pree2e && node ./config/protractor.js 8080 ie",
     "doc": "typedoc --options ./typedoc.json ./src",
     "start": "npm run dev",
     "postinstall": "typings install"
@@ -42,6 +42,8 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/platform-server": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "angular2-express-engine": "0.14.2",
+    "angular2-hapi-engine": "0.14.0",
     "angular2-hmr": "^0.8.0",
     "angular2-universal": "^0.102.1",
     "autoprefixer": "^6.3.6",
@@ -53,8 +55,6 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.6.3",
-    "gulp": "^3.9.1",
-    "gulp-protractor": "^2.4.0",
     "html-minifier": "^2.1.5",
     "html-webpack-plugin": "^2.21.0",
     "http-server": "^0.9.0",
