--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "codelyzer": "0.0.23",
     "copy": "^0.2.3",
     "core-js": "^2.4.0",
+    "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
