--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "preboot": "^2.1.2",
     "protractor": "^3.3.0",
     "raw-loader": "^0.5.1",
+    "remap-istanbul": "^0.6.4",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.6",
