--- a/package.json
+++ b/package.json
@@ -34,20 +34,19 @@
     "postinstall": "typings install"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/platform-server": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "angular2-express-engine": "0.14.2",
-    "angular2-hapi-engine": "0.14.0",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/forms": "^0.1.1",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/platform-server": "2.0.0-rc.3",
+    "@angular/router-deprecated": "2.0.0-rc.2",
     "angular2-hmr": "^0.8.0",
-    "angular2-universal": "^0.102.1",
+    "angular2-universal": "^0.103.2",
     "autoprefixer": "^6.3.6",
-    "codelyzer": "0.0.23",
+    "codelyzer": "^0.0.23",
     "copy": "^0.2.3",
     "core-js": "^2.4.0",
     "coveralls": "^2.11.9",
@@ -56,22 +55,23 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.6.3",
-    "html-minifier": "^2.1.5",
+    "html-minifier": "^2.1.6",
     "html-webpack-plugin": "^2.21.0",
     "http-server": "^0.9.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-spec-reporter": "^2.5.0",
-    "karma": "^0.13.22",
+    "karma": "0.13.22",
     "karma-coverage": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-remap-istanbul": "^0.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
+    "parse5": "^1.5.0",
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.9.1",
     "preboot": "^2.1.2",
@@ -81,13 +81,13 @@
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.6",
-    "sass-loader": "^3.2.1",
+    "sass-loader": "3.2.1",
     "sockjs-client": "1.0.3",
     "sprite-webpack-plugin": "git+https://github.com/narr/sprite-webpack-plugin.git",
     "ts-helpers": "^1.1.1",
     "ts-loader": "^0.8.2",
     "ts-node": "^0.9.2",
-    "tslint": "^3.10.2",
+    "tslint": "^3.12.1",
     "tslint-loader": "^2.1.5",
     "typedoc": "^0.4.4",
     "typescript": "^1.8.10",
